codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_default_footer_preview_when_unset.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select items to override the built-in footer. Leave all items disabl  
                                                                        
  Type to search                                                        
  >                                                                     
› [ ] provider              Current model provider id                   
  [ ] model-name            Current model name                          
  [ ] model-with-reasoning  Current model name with reasoning level     
  [ ] reasoning-effort      Current reasoning effort label (omitted f…  
  [ ] mode                  Current collaboration mode label (omitted…  
  [ ] current-dir           Current working directory                   
  [ ] project-name          Current project or repository name (omitt…  
  [ ] project-root          Project root directory (omitted when unav…  
                                                                        
  codex:main +0/-0      openai • gpt-5.4 • high               50% left  
  Use ↑↓ to navigate, ←→ to move, space to select, enter to confirm, esc
