codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select items to override the built-in footer. Leave all items disabl  
                                                                        
  Type to search                                                        
  >                                                                     
› [x] project-name          Current project or repository name (omitt…  
  [x] git-changes           Tracked Git diff summary against HEAD (om…  
  [x] provider              Current model provider id                   
  [x] model-name            Current model name                          
  [ ] model-with-reasoning  Current model name with reasoning level     
  [ ] reasoning-effort      Current reasoning effort label (omitted f…  
  [ ] mode                  Current collaboration mode label (omitted…  
  [ ] current-dir           Current working directory                   
                                                                        
  codex-rs · +3/-1 · openai · gpt-5-codex                               
  Use ↑↓ to navigate, ←→ to move, space to select, enter to confirm, esc
